# ai_middle_platform

./: .gitignore  CHANGELOG_v0.7.0.md  CHANGELOG_v0.9.0.md  HELP.md  PHASE1_SUMMARY.md  PHASE_2_3_SUMMARY.md  README.md  start_phase2.bat
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  start.bat  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agents.py  alert.py  alliance.py  applications.py  auth.py  billing.py  billing_invoice.py  developer.py  inference.py  knowledge.py  logs.py  mcp.py  middleware.py  models.py  monitor.py  partners.py  payment.py  quota.py  router.py  scenarios.py  skills.py  solutions.py  usage_stats.py  users.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py  security.py
backend/app/middleware/: quota_check.py
backend/app/models/: __init__.py  agent.py  alert.py  api_log.py  app.py  base.py  billing.py  billing_invoice.py  knowledge.py  model.py  monitor.py  partner.py  payment.py  quota.py  skill.py  solution.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  alert.py  alert_service.py  api_key_manager.py  billing.py  billing_integration.py  billing_invoice.py  cache.py  chunker.py  email.py  embedding.py  encryption.py  health_checker.py  key_manager.py  knowledge_pipeline.py  llm.py  metrics.py  notification.py  parser.py  payment.py  quota.py  usage_stats.py  vector_store.py
backend/app/services/agents/: __init__.py  engine.py  flow_engine.py  (+2 more)
backend/app/utils/: permissions.py
backend/docs/: API_EXAMPLES.md  API_KEY_ENCRYPTION.md  CACHE_OPTIMIZATION.md  ERROR_RESPONSE_FORMAT.md  INPUT_VALIDATION.md  LOAD_TESTING.md  SLOW_QUERY_OPTIMIZATION.md  VECTOR_SEARCH_OPTIMIZATION.md
backend/tests/: .gitignore  README.md  conftest.py  pytest.ini  test_integration.py
backend/tests/api/: __init__.py  test_auth.py  test_middleware.py  test_scenarios.py  test_skills.py
backend/tests/load/: locustfile.py
backend/tests/services/: __init__.py  test_agents.py  test_chunker.py  test_encryption.py  test_mcp.py  test_parser.py  test_skills.py
(+77 files in other folders)
